# MbedTLS_Numicro

./: .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
lib/m2354lib/: CMakeLists.txt
lib/m2354lib/patches/: 0001-Fix-memory-leak.patch
lib/mbedtlslib/: CMakeLists.txt
lib/mbedtlslib/include/: nu_mbedtls_config.h
lib/mbedtlslib/patches/: 0001-compatible-with-CryptoAccel.patch
scatter/: m2354.sct
src/common/: sys_init.c
src/ecdh/: CMakeLists.txt  main.c
src/ecdsa/: CMakeLists.txt  main.c
src/helloworld/: CMakeLists.txt  main.c
toolchain/: armclang.cmake
toolchain/Modules/Platform/: Generic-ARMClang-ASM-cortex-m23.cmake  Generic-ARMClang-C-cortex-m23.cmake  Generic-ARMClang-cortex-m-common.cmake  Generic-cortex-m-common.cmake
